# applied-science-journey

./: .pre-commit-config.yaml  .~lock.ssh_key_2.pub#  README.md  hello_world.py  pyproject.toml  ssh_key_2  ssh_key_2.pub
.github/workflows/: ci.yml
applied_science_journey.egg-info/: PKG-INFO  SOURCES.txt
journey/: linear.py
tests/: test_linear.py
